# hardcaml_risc_v

./: .gitignore  .gitmodules  README.md  clockInfo.txt  dune-project  hardcaml_framebuffer_expander.opam  hardcaml_io_controller.opam  hardcaml_memory_controller.opam  hardcaml_risc_v.opam  hardcaml_risc_v_hart.opam  regenerate_alinx_verilog  stty_settings
alinx_vivado_project/project_1/: project_1.xpr
devices/kv260/: board_top.xsa  kv260.xpr  kv260_wrapper.xsa  psu_init.tcl  startup.tcl
devices/nexys_a7/: stty_settings
framebuffer_expander/lib/: dune  framebuffer_expander.ml  framebuffer_expander.mli  pixel_mode.ml  pixel_mode.mli
framebuffer_expander/test/: drawille.ml  dune  test_framebuffer_expander.ml  test_framebuffer_expander_one_bit.ml  test_framebuffer_expander_rgb.ml  test_framebuffer_expander_rgb_aligned.ml  test_framebuffer_expander_rgb_unaligned.ml  test_memory_controller.ml
hardcaml_custom_handshake/: dune  dune-project  handshake.ml  handshake.mli  handshake_intf.ml  hardcaml_custom_handshake.opam
hardcaml_custom_handshake/lib/: dune  handshake.mli
hardcaml_uart_controller/: dune-project
hardcaml_uart_controller/lib/: dune  uart_rx.ml  uart_tx.ml
hardcaml_uart_controller/test/: dune  test_uart_rx.ml  test_uart_tx.ml
hardcaml_usb_controller/lib/: dune  uart_rx.ml  uart_tx.ml
hardcaml_usb_controller/test/: dune  test_uart_rx.ml
hart/lib/: address_width.ml  address_width.mli  alu_operation.ml  alu_operation.mli  branch.ml  branch.mli  cs_register_bank.ml  cs_register_bank.mli  cs_registers.ml  cs_registers.mli  csr.ml  csr.mli  custom_ecall_intf.ml  decode.ml  decode.mli  decode_and_execute.ml  decoded_instruction.ml  decoded_instruction.mli  decoded_instruction_intf.ml  decoded_opcode.ml  decoded_opcode.mli  decoder.ml  dune  enables.ml  execute.ml  execute.mli  execute_pipeline.ml  execute_pipeline.mli  fetch.ml  fetch.mli  funct3.ml  funct3.mli  hart.ml  hart.mli  hart_config_intf.ml  instruction_parts.ml  instruction_parts.mli  load.ml  load.mli  onehot.ml  (+27 more)
hart/test/: dune  example_hart.ml  example_hart.mli  test_branch.ml  test_csr.ml  test_execute.ml  test_fetch.ml  test_load.ml  test_memory_controller.ml  test_op.ml  test_prefetcher.ml  test_prefix_multiplier.ml  test_store.ml  util.ml
io_controller/lib/: data_resize.ml  dma_packet.ml  dune  memory_to_packet8.ml  memory_to_packet8.mli  memory_to_packet8_intf.ml  packet.ml  packet_controller.ml  packet_intf.ml  packet_to_memory.ml  packet_to_memory.mli  packet_to_memory_intf.ml  pulse.ml  router.ml  serial_buffer.ml  serial_to_packet.ml
io_controller/test/: axi8.ml  dune  test_dma_flow.ml  test_end_to_end_dma_uart.ml  test_memory_controller.ml  test_memory_to_packet8.ml  test_pulse.ml  test_router.ml  test_serial_to_packet.ml  test_util.ml  util.ml
lib/: address_width.ml  axi8.ml  branch.ml  bus.ml  bus_intf.ml  cpu.ml  cpu_dma_controller.ml  cpu_intf.ml  decode_and_execute.ml  decoded_instruction.ml  decoded_instruction_intf.ml  decoder.ml  dune  fetch.ml  funct3.ml  hart.ml  hart_config_intf.ml  io_controller_config.ml  io_controller_config.mli  load.ml  memory_bus.ml  memory_bus_intf.ml  memory_controller.ml  op.ml  op_imm.ml  opcode_output.ml  opcodes.ml  register_width.ml  registers.ml  registers_intf.ml  store.ml  system.ml  system.mli  system_dma_controller.ml  system_dma_controller.mli  system_dma_controller_intf.ml  system_intf.ml  system_with_bram.ml  system_with_bram.mli  transaction.ml  (+9 more)
memory_controller/lib/: axi4.ml  axi4.mli  axi4_bram.ml  axi4_config_intf.ml  axi4_intf.ml  axi4_memory_controller_core.ml  axi4_memory_controller_core.mli  bram_memory_controller.ml  bram_memory_controller.mli  bram_memory_controller_core.ml  bram_memory_controller_core.mli  dune  memory_bus.ml  memory_bus.mli  memory_bus_intf.ml  memory_channel_arbitrator.ml  memory_channel_arbitrator.mli  memory_controller.ml  memory_controller.mli  memory_controller_core.ml  memory_controller_core.mli  priority_mode.mli
memory_controller/test/: dune  test_memory_controller.ml
regression-tests/: dune  test_base.ml  test_programs.ml  test_rust_programs.ml  video_emulator.ml
rtl/cpu/: Branch.v  Cpu.v  Decode_and_execute.v  Fetch.v  Hart.v  Load.v  Memory_controller.v  Op.v  Op_0.v  Serial_to_packet.v  Store.v  Uart_tx.v  Uart_tx_0.v  branch.v  cpu.v  cpu_top.v  decode_and_execute.v  dma.v  dma_memory_to_packet.v  fetch.v  hart.v  load.v  memory_controller.v  op.v  op_0.v  packet_router.v  serial_to_packet.v  signal_0.v  store.v  (+2 more)
scripts/: generate_kv260_bram_as_ram  generate_nexsy_a7_axi_ddr_rtl  generate_reports  regenerate_rtl
stream/: dune  stream.ml  stream_intf.ml
test/: dune  opcode_helper.ml  test_branch.ml  test_cpu.ml  test_cpu_core.ml  test_cpu_dma.ml  test_full_system.ml  test_full_system_dma.ml  test_full_system_packet_round_trip.ml  test_load.ml  test_op.ml  test_programs.ml  test_store.ml  test_util.ml
(+293 files in other folders)
