(lang dune 2.9)
(name hardcaml_risc_v)
(generate_opam_files true)
(source
 (github jawline/hardcaml_risc_v))
(authors "Blake Loring")
(maintainers "Blake Loring")
(package
 (name hardcaml_risc_v)
 (synopsis "A complete Risc-V system in Hardcaml")
 (description "A complete Risc-V system in Hardcaml")
 (depends ocaml dune)
 )
