(lang dune 2.9)
(name hardcaml_custom_handshake)
(generate_opam_files true)
(source
 (github jawline/hardcaml_custom_handshake))
(authors "Blake Loring")
(maintainers "Blake Loring")
(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name hardcaml_custom_handshake)
 (synopsis "A functor for handshaking components in Hardcaml")
 (depends ocaml dune)
 )

