(library
 (name hardcaml_risc_v)
 (libraries
  hardcaml
  hardcaml_stream
  hardcaml_memory_controller
  hardcaml_uart_controller
  hardcaml_io_controller
  core
  hardcaml_risc_v_hart)
 (inline_tests)
 (preprocess
  (pps
   ppx_jane
   ppx_deriving_hardcaml
   ppx_deriving.show
   ppx_deriving.ord
   ppx_expect)))
