(library
 (name hardcaml_risc_v)
 (libraries
  hardcaml
  hardcaml_stream
  hardcaml_memory_controller
  hardcaml_uart
  hardcaml_io_controller
  hardcaml_framebuffer_expander
  core
  hardcaml_risc_v_hart)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_hardcaml ppx_deriving.show ppx_deriving.ord ppx_expect)))
