(library
 (name hardcaml_risc_v_regression_tests)
 (libraries
  hardcaml
  core
  async
  async_unix
  hardcaml_waveterm
  hardcaml_risc_v
  hardcaml_risc_v_test)
 (inline_tests
  (deps
   "../test-programs/hello_world_c/hello_world.bin"
   "../test-programs/game_of_life/game_of_life.bin"
   "../test-programs/hello-world-rust/hello-world-rust"))
 (preprocess
  (pps ppx_jane ppx_hardcaml ppx_deriving.show ppx_deriving.ord ppx_expect)))
