(library
 (name hardcaml_risc_v_regression_tests)
 (libraries
  hardcaml
  core
  async
  async_unix
  hardcaml_waveterm
  hardcaml_risc_v
  hardcaml_risc_v_test)
 (inline_tests
  (deps
   "../test-programs/test-c-programs/hello_world_c/hello_world.bin"
   "../test-programs/test-c-programs/scan_line/scan_line.bin"
   "../test-programs/test-rust-programs/hello-world-rust/hello-world-rust.bin"
   "../test-programs/test-rust-programs/chip-8-rust/chip-8-rust.bin"))
 (preprocess
  (pps ppx_jane ppx_hardcaml ppx_deriving.show ppx_deriving.ord ppx_expect)))
