(library
 (name hardcaml_risc_v_test)
 (libraries hardcaml core async async_unix hardcaml_waveterm hardcaml_risc_v)
 (inline_tests
  (deps
   "../test-programs/hello_world_c/hello_world"
   "../test-programs/game_of_life/game_of_life"))
 (preprocess
  (pps
   ppx_jane
   ppx_deriving_hardcaml
   ppx_deriving.show
   ppx_deriving.ord
   ppx_expect)))
