(library
 (name hardcaml_io_controller_test)
 (libraries
  hardcaml
  core
  async
  async_unix
  hardcaml_test_harness
  hardcaml_step_testbench
  hardcaml_waveterm
  hardcaml_uart
  hardcaml_io_controller)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_hardcaml ppx_deriving.show ppx_deriving.ord ppx_expect)))
